fix: kw-field-wrap
control 영역 기본 패딩 삭제, 에러 상태일 때만 bottom 영역 표시, auto-height 추가,
혹시나 영역 높이를 고정으로 가져자고 overflow를 내고 싶을때 false 로 적용 할 것.

--- a/src/components/field/KwField.scss
+++ b/src/components/field/KwField.scss
@@ -419,10 +419,7 @@
 
   &__control {
     outline: none;
-    height: auto;
-    min-height: $kw-field-height;
-    padding-left: 4px;
-    padding-right: 4px;
+    height: $kw-field-height;
   }
 
   &__control-container {
@@ -477,7 +474,7 @@
 
   &--dense {
     .kw-field-wrap__control {
-      min-height: $kw-field-height-dense;
+      height: $kw-field-height-dense;
     }
 
     .kw-field-wrap__bottom {
@@ -493,6 +490,20 @@
     &.kw-field-wrap--dense {
       .kw-field-wrap__control {
         margin-top: $kw-field-label-height-dense;
+      }
+    }
+  }
+
+  &--auto-height {
+    .kw-field-wrap__control {
+      height: auto;
+      min-height: $kw-field-height;
+    }
+
+    &.kw-field-wrap--dense {
+      .kw-field-wrap__control {
+        height: auto;
+        min-height: $kw-field-height-dense;
       }
     }
   }
